--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-<script src="Parser.js"></script>
+<html> 
+  <head><title> NodeJS File Upload Excel Parser </title></head> 
+  <body>
+    <form action="http://localhost:80/upload" method="post" enctype="multipart/form-data">
+      <!-- HTML5 file upload selector-->
+      <input type="file" name="fileupload">
+      <br>
+      <input type="submit">
+    </form>
+  </body> 
+ 
 </html>
