--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html> 
-  <head><title> NodeJS File Upload Excel Parser </title></head> 
+  <head>
+    <title> NodeJS File Upload Excel Parser </title>
+  </head> 
   <body>
     <form action="http://localhost:80/upload" method="post" enctype="multipart/form-data">
       <!-- HTML5 file upload selector-->
       <input type="file" name="fileupload">
       <br>
-      <input type="submit">
+      <input type="submit" id="submit">
     </form>
+    <a href="./newfile25.xlsx">Your file</a>
   </body> 
- 
+
 </html>
